plaque width change for mobile text wrapping fix :0

--- a/css/train-station.css
+++ b/css/train-station.css
@@ -16,7 +16,7 @@
     padding: 1rem;
     background: rgb(97, 97, 97);
     /* background-image: url('/img/backgrounds/lavendarnoise.gif'); */
-    width: 15rem;
+    width: 17rem;
     border: 3px solid rgb(215, 215, 215);
     border-style: inset;
     box-shadow: -2px 2px 4px rgb(0, 0, 0, 0.5);
